add components to landing page

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+  <div id="fb-root"></div>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v5.0"></script>
   <noscript>
     <strong>Sorry, this site needs JavaScript to be enabled to be shown.</strong>
   </noscript>
