--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title>CSESoc UNSW</title>
-  <style>
-    @import url('https://fonts.googleapis.com/css?family=Quicksand:400,500&display=swap');
-  </style>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand:400,500&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+
 </head>
 
 <body>
