--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,13 @@
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title>CSESoc UNSW</title>
 
+  <link rel="preload" as="style"
+    href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+  <link rel="preload" as="style"
+    href="https://fonts.googleapis.com/css?family=Quicksand:400,500&display=swap">
+  <link rel="preload" as="style"
+    href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand:400,500&display=swap">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
