import font awesome

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,6 +12,7 @@
     href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+  <script src="https://kit.fontawesome.com/9b04af9a3b.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
